--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,16 @@
 		<artifactId>spring-boot-starter-test</artifactId>
 		<scope>test</scope>
 	</dependency>
+  <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-crypto</artifactId>
+        <version>5.6.0</version>
+  </dependency>
+  <dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-core</artifactId>
+    <version>5.6.0</version> <!-- Replace with the appropriate version -->
+  </dependency>
 
 	<dependency>
 		<groupId>org.junit.jupiter</groupId>
